--- a/rh-otp/popup.html
+++ b/rh-otp/popup.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <span id="loadedPassword" />
-    <script src="popup.js"></script>
+    <div style="width:190px">
+      <span id="loadedPassword" />
+      <button id="associateButton">Associate</button>
+      <button id="jdoeEphemeralButton">Jdoe Ephemeral</button>    
+      <script src="popup.js"></script>
+    </div>
   </body>
 </html>
